idf_component_register(SRCS "./src/source/bcm2835_spi.cpp"
                            "./src/source/bcm2835_stream.cpp"
                            "./src/source/CHOPCONF.cpp"
                            "./src/source/COOLCONF.cpp"
                            "./src/source/DRV_STATUS.cpp"
                            "./src/source/esp32_stream.cpp"
                            "./src/source/GCONF.cpp"
                            "./src/source/IHOLD_IRUN.cpp"
                            "./src/source/PWMCONF.cpp"
                            "./src/source/SERIAL_SWITCH.cpp"
                            "./src/source/TMC2208Stepper.cpp"
                            "./src/source/TMC2209Stepper.cpp"
                            "./src/source/TMCStepper.cpp"
 INCLUDE_DIRS "./src")